--- a/package.json
+++ b/package.json
@@ -55,23 +55,23 @@
     "sync-dotenv": "npx sync-dotenv"
   },
   "dependencies": {
-    "@nestjs/common": "^6.11.11",
+    "@nestjs/common": "^7.0.8",
     "@nestjs/config": "^0.4.0",
-    "@nestjs/core": "^6.11.11",
-    "@nestjs/graphql": "^6.6.2",
-    "@nestjs/jwt": "^6.1.2",
-    "@nestjs/passport": "^6.2.0",
-    "@nestjs/platform-express": "^6.11.11",
+    "@nestjs/core": "^7.0.8",
+    "@nestjs/graphql": "^7.3.4",
+    "@nestjs/jwt": "^7.0.0",
+    "@nestjs/passport": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.8",
     "@prisma/client": "^2.0.0-beta.3",
     "@sindresorhus/slugify": "^0.11.0",
     "apollo-server-express": "^2.12.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.1",
-    "graphql": "^14.6.0",
+    "graphql": "^15.0.0",
     "graphql-fields": "^2.0.3",
     "graphql-info-transformer": "0.0.1",
     "graphql-request": "^1.8.2",
-    "graphql-tools": "^4.0.7",
+    "graphql-tools": "^5.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -86,10 +86,11 @@
     }
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.14.2",
-    "@nestjs/schematics": "^6.9.4",
-    "@nestjs/testing": "^6.11.11",
+    "@nestjs/cli": "^7.1.2",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.8",
     "@prisma/cli": "^2.0.0-beta.3",
+    "@prisma/generator-helper": "^2.0.0-beta.3",
     "@types/express": "^4.17.0",
     "@types/graphql-fields": "^1.3.2",
     "@types/jest": "^25.2.1",
@@ -136,7 +137,7 @@
     "tslint-etc": "^1.10.1",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-sonarts": "^1.9.0",
-    "typegraphql-prisma": "^0.2.1",
+    "typegraphql-prisma-nestjs": "^0.200.0",
     "typescript": "^3.8.3",
     "wait-on": "^4.0.2",
     "watchexec-bin": "^1.0.0"
