--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-import-resolver-node": "^0.3.4",
+    "eslint-plugin-boundaries": "^1.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-only-warn": "^1.0.2",
