--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-node": "^0.3.4",
-    "eslint-plugin-boundaries": "^1.1.1",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-boundaries": "^2.0.0-beta.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-only-warn": "^1.0.2",
