--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "husky": "^5.0.4",
     "jest": "^26.6.3",
     "jest-createspyobj": "^2.0.0",
+    "jest-ts-auto-mock": "^1.0.12",
     "newman": "^5.2.2",
     "node-fetch": "^2.6.1",
     "node-hot-loader": "^1.21.0",
@@ -128,12 +129,14 @@
     "prisma-query-log": "^2.0.3",
     "simplytyped": "^3.3.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.4.4",
+    "ts-auto-mock": "^3.1.0",
+    "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.14",
     "ts-mockito": "^2.6.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.1.3",
     "universal-mock": "^1.1.0",
     "wait-on": "^5.2.1",
