--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "paths": {
       "@generated/*": ["src/@generated/*"],
       "app_modules/*": ["src/app_modules/*"]
-    }
+    },
+    "plugins": [
+      {
+        "transform": "ts-auto-mock/transformer",
+        "cacheBetweenTests": false
+      }
+    ]
   },
   "include": ["src/**/*.ts", "test/**/*.ts", "@generated/*", "prisma/*.ts"]
 }
