--- a/package.json
+++ b/package.json
@@ -57,14 +57,14 @@
   },
   "dependencies": {
     "@nestjs-steroids/environment": "^1.0.2",
-    "@nestjs/common": "^7.6.7",
-    "@nestjs/core": "^7.6.7",
+    "@nestjs/common": "^7.6.11",
+    "@nestjs/core": "^7.6.11",
     "@nestjs/graphql": "^7.9.8",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.7",
-    "@paljs/plugins": "^2.11.1",
-    "@prisma/client": "^2.15.0",
+    "@nestjs/platform-express": "^7.6.11",
+    "@paljs/plugins": "^2.12.2",
+    "@prisma/client": "^2.16.0",
     "@sindresorhus/slugify": "^1.1.0",
     "apollo-error-converter": "^1.1.1",
     "apollo-server-express": "^2.19.2",
@@ -86,25 +86,25 @@
   "devDependencies": {
     "@nestjs/cli": "^7.5.4",
     "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.7",
-    "@prisma/cli": "^2.15.0",
+    "@nestjs/testing": "^7.6.11",
+    "@prisma/cli": "^2.16.0",
     "@types/express": "^4.17.11",
     "@types/graphql-fields": "^1.3.3",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.22",
-    "@types/passport-jwt": "^3.0.3",
+    "@types/node": "^14.14.25",
+    "@types/passport-jwt": "^3.0.4",
     "@types/supertest": "^2.0.10",
     "@types/wait-on": "^5.2.0",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "common-tags": "^1.8.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-boundaries": "^2.0.0-beta.4",
+    "eslint-plugin-boundaries": "^2.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-only-warn": "^1.0.2",
@@ -118,7 +118,7 @@
     "husky": "^5.0.4",
     "jest": "^26.6.3",
     "jest-createspyobj": "^2.0.0",
-    "jest-ts-auto-mock": "^1.0.12",
+    "jest-ts-auto-mock": "^2.0.0",
     "newman": "^5.2.2",
     "node-fetch": "^2.6.1",
     "node-hot-loader": "^1.21.0",
@@ -131,7 +131,7 @@
     "supertest": "^6.1.3",
     "ts-auto-mock": "^3.1.0",
     "ts-jest": "^26.5.0",
-    "ts-loader": "^8.0.14",
+    "ts-loader": "^8.0.15",
     "ts-mockito": "^2.6.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
@@ -141,8 +141,8 @@
     "universal-mock": "^1.1.0",
     "wait-on": "^5.2.1",
     "watchexec-bin": "^1.0.0",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.21.1",
+    "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
